# infra-mgmt

./: .gitignore  Makefile  Makefile copy  README.md  pyproject.toml
backup_services/OLD_cicd/: main.tf
backup_services/cicd/: README.md  main.tf  outputs.tf  variables.tf
dev-container/: Dockerfile  compose.yml
dev-container/.devcontainer/: devcontainer.json
infra-mgmt-dev-container/: Dockerfile  compose.yml
infra-mgmt-dev-container/.devcontainer/: devcontainer.json
infra_mgmt/bootstrap/: backend.tf
infra_mgmt/bootstrap/state-backend/: main.tf
infra_mgmt/configs/: access.secret.yaml  access.unclassified.yaml  projects.yaml  services.yaml
infra_mgmt/modules/aws_provider/: main.tf
infra_mgmt/modules/environment/: main.tf
infra_mgmt/modules/permission-set/: main.tf
infra_mgmt/modules/services/placeholder_service/: main.tf
infra_mgmt/org/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra_mgmt/python/src/: backup_reinit.py  config.py  models.py  old_config.py  old_models.py
infra_mgmt/python/src/templates/: account_main_tf.txt  account_output_tf.txt  (+4 more)
infra_mgmt/src/: config.py  new_config.py  new_models.py  utils.py
infra_mgmt/src/templates/: accounts_providers.txt
infra_mgmt/terraform/accounts/: README.md
infra_mgmt/terraform/backend/: README.md  main.tf  output.tf  variables.tf
infra_mgmt/terraform/create_accounts/: main.tf  output.tf  variables.tf
infra_mgmt/terraform/org/: main.tf  variables.tf
user_configs_templates/: header.yaml  iam.yaml  reinit.yaml  vpc-vpn-header.yaml
zsh/: .zshrc  my_home_config.zsh
(+60 files in other folders)
