[project]
name = "infra-mgmt"
version = "0.1.0"
description = "The infra-mgmt package contains tools for generating software development infrastructure management."
authors = [
    {name = "Spacewego, LLC"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "pyaml (>=25.7.0,<26.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "boto3 (>=1.34.142,<2.0.0)",
    "awscli (>=1.34.12,<2.0.0)"
]

[project.group.dev.dependencies]
black = ">=24.4.2,<25.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
